<resources>
    <string name="app_name">The Quran</string>
    <string name="app_name_main">The Quran</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_activity_home">Quran</string>
    <string name="fragment1">Surah</string>
    <string name="fragment2">Juza</string>
    <string name="fragment3">Bookmarks</string>
    <string name="app_folder_path">/quran_fekra_computers</string>
    <string name="AppPath">/quran_fekra_computers</string>
    <string name="nameodcompany">Fekra Computers</string>
    <string name="notification_error_ssl_cert_invalid">invalid ssl</string>
<string name="QuranSourcesLink">http://www.islam-db.com/resources/quran/quranpages_1024.zip
</string>
    <string name="aya">Aya</string>
    <string name="ayat">Verses</string>
    <string name="sora">Surah</string>
    <string name="type1">Makki</string>
    <string name="type2">Madani</string>
    <string name="yes">Yes</string>
    <string name="Ok">Ok</string>
    <string name="no">No</string>
    <string name="Cancel">Cancel</string>
    <string name="Alert">Alert</string>
    <string name="page">Page</string>
    <string name="juza">Juza</string>
    <string name="empty_bookmark">No saved bookmarks.</string>
<string name="no_internet_alert">
Your mobile is not connected to the internet, reconnect then try again.
</string>
<string name="mobile_data_alert">
You are connected to internet using Mobile data. It is required to download some mandatory files. Do you accept?
</string>
<string name="normal_download_alert">
Application need to download mandatory files. Do you accept?
</string>
    <string name="menu1">Jump</string>
    <string name="menu2">Translations</string>
    <string name="menu3">Help</string>
    <string name="menu4">About Us</string>
    <string name="menu5">Rate App</string>
    <string name="menu6">Settings</string>
    <string name="menu7">Share App</string>
    <string name="title_activity_quran_page_read">QuranPageRead</string>
    <string name="noLastPage">You do not have the last page yet</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Explanation">Explanation</string>
    <string name="LastPage">Last Page</string>
    <string name="search">Search</string>
    <string name="searchReslt">result for :</string>
    <string name="download">Downloading...</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloadavaliable">Available for download</string>
    <string name="translation">Translations</string>
    <string name="settings">Settings</string>
    <string name="Remove">Remove</string>
    <string name="removeTranslationAlert">Are you sure you want to remove this translation?</string>
    <string name="removeTranslationAlertNegative">CANCEL</string>
    <string name="removeTranslationAlertPositive">REMOVE</string>
    <string name="ok">OK</string>
    <string name="nosearch">No search results</string>
    <string name="extract">Extracting</string>
    <string name="copydata">Copying database</string>
    <string name="failed">Failed</string>
    <string name="Done">Done</string>
<string name="permission">
The application can not start without this permission.
</string>
    <string name="jump">Jump</string>
    <string name="to_page">Go to page</string>
    <string name="go_to">Jump</string>
    <string name="success_download">Download complete</string>
    <string name="failed_download">Failed, try again.</string>
    <string name="about">About</string>
<string name="company_info_web">
تعتبر شركة فكرة من إحدي شركات البرمجة التي تتمتع بالخبرة في مجال تصميم تطبيقات المحمول والمواقع الإليكترونية، لدينا فريق عمل قوي، ذو خبرة عميقة في تطوير الأدوات التكنولوجية الرئيسية المختلفة من جافا، دوت نت، بالإضافة إلي معرفتنا العميقة بالآي فون والاندرويد والبلاك بيري. فكرة للحاسبات تحتل مكان فريد من بين المئات من الشركات المحترفة في البرمجة وشركات تصميم المواقع الإليكترونية، فنحن لا نكتفي فقط بتقديم خدمة او منتج ولكننا نقدم افضل الوسائل والحلول المتاحة التي تتناسب مع المتطلبات المالية والوظيفية لعملائنا. إن تحليلاتنا الديمجرافية التنافسية والتي هي في عمق السوق تمكن شركتنا من إنتاج تحسينات مثلى لمحركات البحث لا يستطيع منافسينا إنتاجها بنفس المستوى. نحن نهدف باستمرار لعمل حلول مختلفة بناءًا على متطلبات عملائنا المالية واستراتيجياتهم الدقيقة تقود إلى علاقات عمل مستمرة وطويلة المدى. نتمنى مساعدتكم.
</string>
    <string name="download_busy">Other downloads in progress</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="success_download_canceled">Download canceled</string>
    <string name="aya_copy">Verse copied</string>
    <string name="translation_deleted">Translation file deleted</string>
    <string name="mb">MB</string>
    <string name="basmala">Basmalah</string>
    <string name="error_page">Not a page in Quran</string>
    <string name="qari_minshawi_murattal_gapless">Minshawi Murattal (gapless)</string>
    <string name="qari_husary_gapless">Husary (gapless)</string>
    <string name="qari_sudais_gapless">Abdurrahman As-Sudais (gapless)</string>
    <string name="qari_qatami_gapless">Nasser Al Qatami (gapless)</string>
    <string name="qari_abdulbaset">Abd Al-Basit</string>
    <string name="qari_abdulbaset_mujawwad">Abd Al-Basit Mujawwad</string>
    <string name="qari_basfar">Abdullah Basfar</string>
    <string name="qari_suadis">Abdurrahmaan As-Sudais</string>
    <string name="qari_shatri">Abu Bakr Ash-Shatri</string>
    <string name="qari_afasy">Mishary Al-Afasy</string>
    <string name="qari_saad_al_ghamdi">Saad Al-Ghamdi</string>
    <string name="qari_walk">Ibrahim Walk (English Trans.)</string>
    <string name="qari_hani_rifai">Hani Ar-Rifai</string>
    <string name="qari_husary_mujawwad">Husary Mujawwad</string>
    <string name="qari_hudhayfi">Ali Al-Hudhaify</string>
    <string name="qari_muaiqly">Maher Al Muaiqly</string>
    <string name="qari_minshawi_mujawwad">Minshawy Mujawwad</string>
    <string name="qari_tablawy">Mohammad al Tablaway</string>
    <string name="qari_ayyoub">Muhammad Ayyoub</string>
    <string name="qari_jibreel">Muhammad Jibreel</string>
    <string name="qari_shuraym">Saood Ash-Shuraym</string>
    <string name="qari_dussary">Yasser Ad-Dussary</string>
    <string name="qari_abdulbaset_gapless">Abd Al-Basit (gapless)</string>
    <string name="qari_abdulbaset_mujawwad_gapless">Abd Al-Basit Mujawwad (gapless)</string>
    <string name="qari_aziz_alili_gapless">Aziz Alili (gapless)</string>
    <string name="qari_salah_budair_gapless">Salah Budair (gapless)</string>
    <string name="qari_shuraym_gapless">Saood Ash-Shuraym (gapless)</string>
    <string name="qari_yasser_dussary_gapless">Yasser Ad-Dussary (gapless)</string>
    <string name="qari_mohammad_altablawi_gapless">Mohammad al Tablawy (gapless)</string>
    <string name="qari_sahl_yaseen_gapless">Sahl Yaseen (gapless)</string>
    <string name="qari_shatri_gapless">Abu Bakr Ash-Shatri (gapless)</string>
    <string name="qari_ahmad_nauina_gapless">Ahmad Nauina (gapless)</string>
    <string name="qari_akram_al_alaqmi">Akram Al-Alaqmi (gapless)</string>
    <string name="qari_ali_hajjaj_alsouasi_gapless">Ali Hajjaj Alsouasi (gapless)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_translation_aya">TranslationAyaActivity</string>
    <string name="display">Display Settings</string>
    <string name="arabic_mood">Arabic Mode</string>
    <string name="arabic_mood_summary">Use Arabic mode for application</string>
    <string name="navigation">Navigation</string>
    <string name="lock_screen">Lock screen orientation</string>
    <string name="night_mode">Night Mode</string>
    <string name="lock_screen_summary">Adaptive to current orientation mode</string>
    <string name="lock_screen_summary1">Use dark background and white fonts</string>
    <string name="volume_key">Volume key navigation</string>
    <string name="volume_key_summary">Navigation between pages using volume key</string>
    <string name="translations_pref">Translations Preferences</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Download and manage translations</string>
    <string name="ayah_translation">Ayah before translation</string>
    <string name="ayah_translation_summary">Show ayah in arabic above the translation</string>
    <string name="text_size">Text size</string>
    <string name="Text_size_summary">Translation text size</string>
    <string name="current_page">Current Page</string>
    <string name="sura_bookmark">Page Bookmark</string>
    <string name="audio">Audio Options</string>
    <string name="stream">Streaming</string>
<string name="stream_summary">
Stream audio when possible (non-gapless audio only)
</string>
    <string name="audio_manager">Audio manager</string>
    <string name="audio_manger_summary">Manage and download audio</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">large</string>
    <string name="read">Read</string>
    <string name="title_activity_translation_read">TranslationReadActivity</string>
    <string name="hezb">Hezb</string>
</resources>