<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:padding="16dp"
    android:gravity="center"
    android:layout_height="280dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="left"
        android:textColor="#FFFFFF"
        android:text="@string/jump"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/to_page"/>

    <EditText
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:hint="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/go_to"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/suras"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            style="@style/spinner_style"/>

        <Spinner
            android:id="@+id/verses"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            style="@style/spinner_style"/>


    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/ok"
        android:layout_gravity="right"
        android:textColor="#d0d0d0"/>




</LinearLayout>